--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.6.0",
     "axios": "^0.19.0",
     "core-js": "^3.3.2",
     "tailwindcss": "^1.1.3",
@@ -15,6 +16,7 @@
     "vue": "^2.6.10",
     "vue-axios": "^2.1.5",
     "vue-router": "^3.1.3",
+    "vue-scrollto": "^2.17.1",
     "vuex": "^3.0.1",
     "vuex-persist": "^2.1.1"
   },
